# mattilda

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260120_0001_initial_tables.py  20260120_0002_add_external_id_indexes.py  20260120_0003_add_fk_indexes.py
app/: main.py
app/api/v1/: health.py  invoices.py  payments.py  schools.py  students.py
app/core/: cache.py  config.py  db.py  exceptions.py  logging.py  metrics.py  security.py
app/models/: __init__.py  invoice.py  payment.py  school.py  student.py
app/schemas/: __init__.py  invoice.py  invoice_balance.py  payment.py  school.py  statement.py  student.py
app/services/: __init__.py  health_service.py  invoice_service.py  payment_service.py  school_service.py  statement_service.py  student_service.py
app/tests/: conftest.py
app/tests/services/: test_business_rules_invoices.py  test_business_rules_payments.py  test_business_rules_students.py
app/utils/: pagination.py
terraform/: README.md  ecs.tf  main.tf  network.tf  outputs.tf  providers.tf  rds.tf  redis.tf  security.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py
tests/api/v1/: test_health.py  test_invoices_api.py  test_payments_api.py  test_schools_api.py  test_statements_api.py  test_students_api.py
tests/models/: test_fixtures.py  test_models.py
