[tool.poetry]
name = "mattilda-backend"
version = "0.1.0"
description = "Mattilda backend challenge API"
authors = ["Mattilda Team <dev@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.2"
uvicorn = { version = "0.27.1", extras = ["standard"] }
SQLAlchemy = "2.0.27"
psycopg2-binary = "2.9.9"
pydantic-settings = "2.1.0"
alembic = "1.13.1"
redis = "5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"
httpx = "0.26.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
